# Snask

snask_compiler/: COMO_USAR.md  Cargo.toml  GUIA_SNASK.md  QUICKSTART.md  README.md  RELEASE_NOTES.md  add_modules.patch  basic_test.snask  build_error.txt  build_log.txt  check_error.txt  debug.snask  exemplo_modulo.rs  features  install.ps1  interpolation_test.snask  json_test.snask  math_test.snask  modules_test.snask  package_manager_test.snask  run.bat  semantic_fail.snask  stdlib_simple_test.snask  stdlib_test.snask  test.snask  test_math.snask  update_semantic.ps1
snask_compiler/docs/: BLaze.md  BlazeAuth.md  BlazeDB.md
snask_compiler/public/: style.css
snask_compiler/src/: ast.rs  interpreter.rs  main.rs  modules.rs  packages.rs  parser.rs  semantic_analyzer.rs  stdlib.rs  symbol_table.rs  types.rs  value.rs
snask_compiler/src/stdlib/: blaze.rs  blaze_auth.rs  blaze_db.rs  collections.rs  http.rs  io.rs  json.rs  math.rs  string.rs  sys.rs
snask_compiler/static/: style.css
snask_compiler/templates/: admin_dashboard.html  admin_novo_post.html  base.html  dashboard.html  home.html  index.html  login.html  post_view.html  posts.html  register.html
snask_vscode_extension/snask-lang/: CHANGELOG.md  README.md  language-configuration.json  package-lock.json  package.json  snask-lang-0.0.1.vsix  tsconfig.json  vsc-extension-quickstart.md
snask_vscode_extension/snask-lang/icons/: snask-icon-theme.json
snask_vscode_extension/snask-lang/snippets/: snask.json
snask_vscode_extension/snask-lang/src/: extension.ts
stdlib/: string.rs
(+1 files in other folders)
