[package]
name = "snask"
version = "0.2.1"
edition = "2021"

# Dummy comment to force rebuild
[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.2.0"
clap = { version = "4.5.53", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["blocking"] }
git2 = "0.18"
directories = "5"
url = "2"
